--- a/roles/jenkins/templates/pipeline.xml
+++ b/roles/jenkins/templates/pipeline.xml
@@ -3,24 +3,6 @@
     <actions/>
     <description></description>
     <keepDependencies>false</keepDependencies>
-    <properties>
-        <org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
-            <triggers>
-                <org.jenkinsci.plugins.gwt.GenericTrigger plugin="generic-webhook-trigger@1.84">
-                    <spec></spec>
-                    <regexpFilterText></regexpFilterText>
-                    <regexpFilterExpression></regexpFilterExpression>
-                    <printPostContent>false</printPostContent>
-                    <printContributedVariables>false</printContributedVariables>
-                    <causeString>Generic Cause</causeString>
-                    <token>{{item.componentName}}</token>
-                    <tokenCredentialId></tokenCredentialId>
-                    <silentResponse>false</silentResponse>
-                    <overrideQuietPeriod>false</overrideQuietPeriod>
-                </org.jenkinsci.plugins.gwt.GenericTrigger>
-            </triggers>
-        </org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
-    </properties>
     <definition class="org.jenkinsci.plugins.workflow.cps.CpsScmFlowDefinition" plugin="workflow-cps@2725.v7b_c717eb_12ce">
         <scm class="hudson.plugins.git.GitSCM" plugin="git@4.11.3">
             <configVersion>2</configVersion>
@@ -39,7 +21,7 @@
             <submoduleCfg class="empty-list"/>
             <extensions/>
         </scm>
-        <scriptPath>Jenkinsfile</scriptPath>
+        <scriptPath>{{item.fileName}}</scriptPath>
         <lightweight>true</lightweight>
     </definition>
     <triggers/>
